--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "bootstrap": "^3.3.7",
+    "bourbon": "^5.1.0",
     "core-js": "^2.5.4",
     "firebase": "^5.10.0",
     "rxjs": "~6.3.3",
